--- a/ProjectTreeShoolCommon/Homepage.html
+++ b/ProjectTreeShoolCommon/Homepage.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <!-- links -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homestyle.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +63,7 @@
                         </span>
                         <h3>Documentazione</h3>
                         <p>
-                            Trascrizione completa in italiano delle documentazione ufficiali.
+                            Traduzione completa in italiano delle documentazione ufficiali.
                         </p>
                     </div>
                     <div class="headerunder">
