--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- links -->
-    <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="/indexstyle.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,15 +42,18 @@
             </p>
         </div>
     </header>
+    <!-- main section start -->
     <main>
+        <!-- main section start -->
         <section class="mainsection">
+            <!-- sections start -->
             <section>
                 <h2>Elementi per il testo in HTML</h2>
                 <ol>
-                    <li><a href="">Elementi e tag in HTML</a></li>
-                    <li><a href="">Gli attributi</a></li>
-                    <li><a href="">Titoli, paragrafi e testi</a></li>
-                    <li><a href="">Grassetti e corsivi</a></li>
+                    <li><a href="elementi-e-tag-in-html.html">Elementi e tag in HTML</a></li>
+                    <li><a href="gli-attributi.html">Gli attributi</a></li>
+                    <li><a href="titoli-paragrafi-e-testi.html">Titoli, paragrafi e testi</a></li>
+                    <li><a href="grassetti-e-corsivi-usare-i-tag-strong-em-b-e-i.html">Grassetti e corsivi</a></li>
                     <li><a href="">Citazioni, acronimi, codice e altri elementi per il testo</a></li>
                     <li><a href="">Commenti in HTML</a></li>
                     <li><a href=""> Elenchi puntati e numerati</a></li>
@@ -70,6 +73,86 @@
                     <li><a href=""> Img src, inserire le immagini nel markup (base64, SVG)</a></li>
                     <li><a href="">Includere un file Audio</a></li>
                     <li><a href=""> Includere un file Video</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>L’HTML e i fogli di stile (CSS)</h2>
+                <ol start="19">
+                    <li><a href="">Separare il layout dal contenuto</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Lo sfondo di un documento HTML</h2>
+                <ol start="20">
+                    <li><a href="">Colore di sfondo a tinta unita in HTML</a></li>
+                    <li><a href=""> Inserire un'immagine di sfondo in HTML</a></li>
+                    <li><a href=""> Eliminare i margini delle pagine</a></li>
+                    <li><a href="">Approfondimenti: lo sfondo con i CSS</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Il testo di un documento HTML</h2>
+                <ol start="24">
+                    <li><a href="">Impostare il colore del testo e dei link in tutta la pagina HTML</a></li>
+                    <li><a href=""> Scegliere il font del testo con HTML</a></li>
+                    <li><a href="">  Scegliere il colore del testo in HTML</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Le immagini e le mappe di immagine</h2>
+                <ol start="27">
+                    <li><a href="">Disporre in un contesto le immagini e centrarle</a></li>
+                    <li><a href=""> Le mappe di immagine</a></li>
+                    <li><a href=""> Le mappe di immagine lato server</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Le tabelle</h2>
+                <ol start="30">
+                    <li><a href="">Attributi del tag table</a></li>
+                    <li><a href=""> Attributi di table: tr e td</a></li>
+                    <li><a href=""> Impaginare un layout con le tabelle</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>I Frame</h2>
+                <ol start="33">
+                    <li><a href="">Comporre una pagina in frame HTML</a></li>
+                    <li><a href=""> Attributi dei frames per la visualizzazione</a></li>
+                    <li><a href=""> I link in un frameset e il tag noframes</a></li>
+                    <li><a href=""> L'iframe</a></li>
+                    <li><a href=""> Vantaggi e svantaggi dei frames</a></li>
+                    <li><a href=""> Impaginare a livelli con i CSS</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>I Moduli (forms) </h2>
+                <ol start="39">
+                    <li><a href=""> Struttura del tag <form></a></li>
+                    <li><a href="">  Un po' d'ordine: raggruppare i moduli</a></li>
+                    <li><a href="">  Il tag Input</a></li>
+                    <li><a href=""> Inserire testo (campo testo, textarea, password)</a></li>
+                    <li><a href=""> Consentire delle scelte (checkbox, radio, select)</a></li>
+                    <li><a href=""> Altri campi (file e hidden)</a></li>
+                    <li><a href=""> Approfondimenti sui form</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Includere elementi multimediali e script</h2>
+                <ol start="46">
+                    <li><a href=""> Premessa: il tag object<form></a></li>
+                    <li><a href="">Includere un file Flash</a></li>
+                    <li><a href="">  Includere un file Java</a></li>
+                    <li><a href=""> Includere script JavaScript o CSS esterni</a></li>
+                </ol>
+            </section>
+            <section>
+                <h2>Linguaggi e strumenti</h2>
+                <ol start="50">
+                    <li><a href=""> I meta tag<form></a></li>
+                    <li><a href="">Il DOCTYPE (DTD)</a></li>
+                    <li><a href="">Configurare un programma FTP</a></li>
+                    <li><a href="">Conclusioni</a></li>
                 </ol>
             </section>
         </section>
