--- a/ProjectTreeShoolCommon/Homepage.html
+++ b/ProjectTreeShoolCommon/Homepage.html
@@ -26,7 +26,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <a href="Homepage.html"><img src="logoimg/logo.webp" alt="logoimg"></a>
+                <a href="Homepage.html"><img src="logoimg/logo.webp" width="100%" alt="logoimg"></a>
             </div>
             <div class="links-container">
                 <a href="index.html">Html</a>
