--- a/ProjectTreeShoolCommon/grassetti-e-corsivi-usare-i-tag-strong-em-b-e-i.html
+++ b/ProjectTreeShoolCommon/grassetti-e-corsivi-usare-i-tag-strong-em-b-e-i.html
@@ -77,10 +77,124 @@
             <h2>
                 Come convivono b, i, em e strong
             </h2>
+            <p>
+                HTML5 combina le due tradizioni e valorizza l'importanza dei tag come < b > e < i >.
+                L'uso corretto di questi tag aggiunge ritmo al contenuto senza tralasciare la semantica.
+                La specifica di HTML5 fornisce indicazioni su come utilizzare correttamente i diversi tag.
+            </p>
+            <table>
+                <thead>
+                    <tr><td>Tag</td><td>Descrizione</td></tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>< strong ></td>
+                        <td>
+                            <ul>
+                                <li>
+                                    Il tag "strong" attribuisce al testo una forte importanza, serietà o urgenza.
+                                </li>
+                                <li>
+                                    Può essere utilizzato per tematizzare la pagina e per strategie di ottimizzazione per i motori di ricerca (SEO).
+                                </li>
+                                <li>
+                                    Può essere inserito all'interno degli headings per indicare la parte più importante di un titolo.
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>< b ></td>
+                        <td>
+                            <ul>
+                                <li>
+                                    Aggiunge una differenza stilistica al testo,
+                                </li>
+                                <li>
+                                    Ciò implica che il testo può essere formattato in modo diverso dal resto del contenuto, ma senza una specifica enfasi o rilevanza.                                
+                                </li>
+                                <li>
+                                    Questa differenza stilistica può essere applicata utilizzando gli stili di formattazione come il grassetto o altri elementi di design.
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>< em ></td>
+                        <td>
+                            <ul>
+                                <li>
+                                    Simile a strong, serve a rappresentare un testo o una frase che si pronuncia in modo differente dal resto al testo. (da emphasis diventa stress emphasis) .
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>< i ></td>
+                        <td>
+                            <ul>
+                                <li>
+                                    L'obiettivo è esprimere un tono, uno stato d'animo o qualcosa che si discosti dal resto del contenuto senza aggiungere ulteriori significati o importanza.
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>
+                In definitiva si perfeziona la capacità espressiva di "strong" e "em", come pure di "i" e "b", una volta svincolati dalle definizioni di Italic e Bold. Quanto agli stili, ora sono perfettamente confinati nell'ambito dei CSS.
+            </p>
+        </section>
+        <section>
+            <h2>Esempi di utilizzo dei tag strong, em, b e i</h2>
+            <div class="codecontainer">
+                <pre>
+                    La < strong >cucina< /strong > è la parte più importante della casa...
+                </pre>
+            </div>
+            <cite>
+                <b>
+                    In questo caso sottolineiamo la parola chiave "cucina" che è la più importante della frase.
+                </b>
+            </cite>
+            <div class="codecontainer">
+                <pre>
+                    La ristrutturazione? Sarebbe ideale avere già tutto
+                    pronto < em >prima del trasloco< /em >.
+                </pre>
+            </div>
+            <cite>
+                <b>
+                    Qui poniamo l'accento sul momento in cui completare i lavori a casa.
+                </b>
+            </cite>
+            <div class="codecontainer">
+                <pre>
+                    Anche per le piastrelle del bagno una buona scelta è quella
+                    del < i >gres porcellanato< /i >
+                </pre>
+            </div>
+            <cite>
+                <b>
+                    Qui utilizziamo il tag < i > per indicare un termine tecnico.
+                </b>
+            </cite>
+            <div class="codecontainer">
+                <pre>
+                    < b >Ricordi quando ti ho detto che ti avrei ammazzato per ultimo?< /b >
+                    Sì, l'hai detto! L'hai detto!
+                    < b >Ti ho mentito.< /b >
+                </pre>
+            </div>
+            <cite>
+                <b>
+                    In questo esempio differenziamo lo stile delle frasi pronunciate da Arnold Schwarzenegger in una celebre scena di "Commando".
+                </b>
+            </cite>
         </section>
         <section class="buttonsection">
             <a href="titoli-paragrafi-e-testi.html">Precedente</a>
-            <a href="">Seguente</a>
+            <a href="citazioni-acronimi-codice-e-altri-elementi-per-il-testo.html">Seguente</a>
         </section>
     </section>
 
