--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -54,8 +54,8 @@
                     <li><a href="gli-attributi.html">Gli attributi</a></li>
                     <li><a href="titoli-paragrafi-e-testi.html">Titoli, paragrafi e testi</a></li>
                     <li><a href="grassetti-e-corsivi-usare-i-tag-strong-em-b-e-i.html">Grassetti e corsivi</a></li>
-                    <li><a href="">Citazioni, acronimi, codice e altri elementi per il testo</a></li>
-                    <li><a href="">Commenti in HTML</a></li>
+                    <li><a href="citazioni-acronimi-codice-e-altri-elementi-per-il-testo.html">Citazioni, acronimi, codice e altri elementi per il testo</a></li>
+                    <li><a href="commenti-in-html.html">Commenti in HTML</a></li>
                     <li><a href=""> Elenchi puntati e numerati</a></li>
                     <li><a href="">Tabella HTML: struttura di base</a></li>
                     <li><a href=""> Raggruppare celle con rowspan e colspan</a></li>
