--- a/ProjectTreeShoolCommon/gli-attributi.html
+++ b/ProjectTreeShoolCommon/gli-attributi.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elementi-e-tag-in-html</title>
+    <title>Gli attributi</title>
 </head>
 <body>
 <!-- nav section start -->
