--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Argomenti 25/10/2023 TreeSchool</title>
+    <title>Guida HTML</title>
 </head>
 <body>
 
