--- a/ProjectTreeShoolCommon/commenti-in-html.html
+++ b/ProjectTreeShoolCommon/commenti-in-html.html
@@ -112,7 +112,7 @@
         </section>
         <section class="buttonsection">
             <a href="citazioni-acronimi-codice-e-altri-elementi-per-il-testo.html">Precedente</a>
-            <a href="commenti-in-html.html">Seguente</a>
+            <a href="elenchi-puntati-e-numerati.html">Seguente</a>
         </section>
     </section>
 </main>    
