--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -56,7 +56,7 @@
                     <li><a href="grassetti-e-corsivi-usare-i-tag-strong-em-b-e-i.html">Grassetti e corsivi</a></li>
                     <li><a href="citazioni-acronimi-codice-e-altri-elementi-per-il-testo.html">Citazioni, acronimi, codice e altri elementi per il testo</a></li>
                     <li><a href="commenti-in-html.html">Commenti in HTML</a></li>
-                    <li><a href=""> Elenchi puntati e numerati</a></li>
+                    <li><a href="elenchi-puntati-e-numerati.html"> Elenchi puntati e numerati</a></li>
                     <li><a href="">Tabella HTML: struttura di base</a></li>
                     <li><a href=""> Raggruppare celle con rowspan e colspan</a></li>
                 </ol>
