--- a/ProjectTreeShoolCommon/commenti-in-html.html
+++ b/ProjectTreeShoolCommon/commenti-in-html.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- links -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,10 +18,10 @@
 <nav class="navbar">
     <div class="nav-container">
         <div class="logo">
-            <a href="/Homepage.html"><img src="/logoimg/logo.webp" alt="logoimg"></a>
+            <a href="Homepage.html"><img src="logoimg/logo.webp" alt="logoimg"></a>
         </div>
         <div class="links-container">
-            <a href="/index.html">Html</a>
+            <a href="index.html">Html</a>
             <a href="">css</a>
             <a href="">javascript</a>
             <a href="">esercizi</a>
