--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- links -->
-    <link rel="stylesheet" href="/indexstyle.css">
+    <link rel="stylesheet" href="indexstyle.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
