--- a/ProjectTreeShoolCommon/elenchi-puntati-e-numerati.html
+++ b/ProjectTreeShoolCommon/elenchi-puntati-e-numerati.html
@@ -352,7 +352,7 @@
         </section>
         <section class="buttonsection">
             <a href="commenti-in-html.html">Precedente</a>
-            <a href="gli-attributi.html">Seguente</a>
+            <a href="tabella-struttura-di-base.html">Seguente</a>
         </section>
     </section>
 
