--- a/ProjectTreeShoolCommon/index.html
+++ b/ProjectTreeShoolCommon/index.html
@@ -57,15 +57,15 @@
                     <li><a href="citazioni-acronimi-codice-e-altri-elementi-per-il-testo.html">Citazioni, acronimi, codice e altri elementi per il testo</a></li>
                     <li><a href="commenti-in-html.html">Commenti in HTML</a></li>
                     <li><a href="elenchi-puntati-e-numerati.html"> Elenchi puntati e numerati</a></li>
-                    <li><a href="">Tabella HTML: struttura di base</a></li>
-                    <li><a href=""> Raggruppare celle con rowspan e colspan</a></li>
+                    <li><a href="tabella-struttura-di-base.html">Tabella HTML: struttura di base</a></li>
+                    <li><a href="raggruppare-celle-con-rowspan-e-colspan.html"> Raggruppare celle con rowspan e colspan</a></li>
                 </ol>
             </section>
             <section>
                 <h2>Ipertesti ed elementi multimediali</h2>
                 <ol start="10">
-                    <li><a href="">I link in HTML, l'ipertesto</a></li>
-                    <li><a href=""> I percorsi assoluti e relativi in HTML</a></li>
+                    <li><a href="i-link-e-lipertestualit.html">I link in HTML, l'ipertesto</a></li>
+                    <li><a href="i-percorsi-assoluti-e-relativi.html"> I percorsi assoluti e relativi in HTML</a></li>
                     <li><a href=""> I link interni o ancore in HTML</a></li>
                     <li><a href="">Gli attributi dei link</a></li>
                     <li><a href="">Img HTML: inserire le immagini</a></li>
